Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35619

Assertion failure in row_purge_del_mark_error

Details

    Description

      11.7 d60efa269e798537efa77b2b915288425f6e73f1

      (rr) bt
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #1  0x000006cc48731859 in __GI_abort () at abort.c:79
      #2  0x000006cc48731729 in __assert_fail_base (fmt=0x6cc488c7588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55dc39f6950a "0", 
          file=0x55dc39f68ee8 "/data/MDEV-35619/11.7/storage/innobase/row/row0purge.cc", line=773, function=<optimized out>) at assert.c:92
      #3  0x000006cc48742fd6 in __GI___assert_fail (assertion=0x55dc39f6950a "0", file=0x55dc39f68ee8 "/data/MDEV-35619/11.7/storage/innobase/row/row0purge.cc", line=773, 
          function=0x55dc39f69510 "void row_purge_del_mark_error(const btr_cur_t&, const dtuple_t&)") at assert.c:101
      #4  0x000055dc396da040 in row_purge_del_mark_error (cursor=..., entry=...) at /data/MDEV-35619/11.7/storage/innobase/row/row0purge.cc:773
      #5  0x000055dc396da2a8 in row_purge_remove_sec_if_poss_tree (node=0x55dc3d4eacf0, index=0x71c480bc780, entry=0x41e72c005d10, page_max_trx_id=1049)
          at /data/MDEV-35619/11.7/storage/innobase/row/row0purge.cc:839
      #6  0x000055dc396daa2d in row_purge_remove_sec_if_poss (node=0x55dc3d4eacf0, index=0x71c480bc780, entry=0x41e72c005d10)
          at /data/MDEV-35619/11.7/storage/innobase/row/row0purge.cc:985
      #7  0x000055dc396db69a in row_purge_upd_exist_or_extern_func (thr=0x55dc3d4e9d70, node=0x55dc3d4eacf0, undo_rec=0x7ffea87c07b5 "\a\364\f\033\027")
          at /data/MDEV-35619/11.7/storage/innobase/row/row0purge.cc:1148
      #8  0x000055dc396dcd0e in row_purge_record_func (node=0x55dc3d4eacf0, undo_rec=0x7ffea87c07b5 "\a\364\f\033\027", thr=0x55dc3d4e9d70, updated_extern=false)
          at /data/MDEV-35619/11.7/storage/innobase/row/row0purge.cc:1539
      #9  0x000055dc396dce68 in row_purge (node=0x55dc3d4eacf0, undo_rec=0x7ffea87c07b5 "\a\364\f\033\027", thr=0x55dc3d4e9d70)
          at /data/MDEV-35619/11.7/storage/innobase/row/row0purge.cc:1578
      #10 0x000055dc396dcf41 in row_purge_step (thr=0x55dc3d4e9d70) at /data/MDEV-35619/11.7/storage/innobase/row/row0purge.cc:1641
      #11 0x000055dc39650c82 in que_thr_step (thr=0x55dc3d4e9d70) at /data/MDEV-35619/11.7/storage/innobase/que/que0que.cc:554
      #12 0x000055dc39650ef7 in que_run_threads_low (thr=0x55dc3d4e9d70) at /data/MDEV-35619/11.7/storage/innobase/que/que0que.cc:610
      #13 0x000055dc3965100f in que_run_threads (thr=0x55dc3d4e9d70) at /data/MDEV-35619/11.7/storage/innobase/que/que0que.cc:630
      #14 0x000055dc397254db in srv_task_execute () at /data/MDEV-35619/11.7/storage/innobase/srv/srv0srv.cc:1356
      #15 0x000055dc3972593c in srv_purge_worker_task_low () at /data/MDEV-35619/11.7/storage/innobase/srv/srv0srv.cc:1487
      #16 0x000055dc39725b2c in purge_worker_callback () at /data/MDEV-35619/11.7/storage/innobase/srv/srv0srv.cc:1498
      #17 0x000055dc398f5a5c in tpool::task_group::execute (this=0x55dc3b167e60 <purge_task_group>, t=0x55dc3b167c60 <purge_worker_task>)
          at /data/MDEV-35619/11.7/tpool/task_group.cc:73
      #18 0x000055dc398f5e4a in tpool::task::execute (this=0x55dc3b167c60 <purge_worker_task>) at /data/MDEV-35619/11.7/tpool/task.cc:32
      #19 0x000055dc398ef19d in tpool::thread_pool_generic::worker_main (this=0x55dc3d4351d0, thread_var=0x55dc3d435540) at /data/MDEV-35619/11.7/tpool/tpool_generic.cc:575
      #20 0x000055dc398f5818 in std::__invoke_impl<void, void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> (__f=
          @0x3558100014c8: (void (tpool::thread_pool_generic::*)(class tpool::thread_pool_generic * const, struct tpool::worker_data *)) 0x55dc398ef0ce <tpool::thread_pool_generic::worker_main(tpool::worker_data*)>, __t=@0x3558100014c0: 0x55dc3d4351d0) at /usr/include/c++/9/bits/invoke.h:73
      #21 0x000055dc398f56fa in std::__invoke<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> (__fn=
          @0x3558100014c8: (void (tpool::thread_pool_generic::*)(class tpool::thread_pool_generic * const, struct tpool::worker_data *)) 0x55dc398ef0ce <tpool::thread_pool_generic::worker_main(tpool::worker_data*)>) at /usr/include/c++/9/bits/invoke.h:95
      #22 0x000055dc398f5619 in std::thread::_Invoker<std::tuple<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> >::_M_invoke<0ul, 1ul, 2ul> (this=0x3558100014b8) at /usr/include/c++/9/thread:244
      #23 0x000055dc398f55b4 in std::thread::_Invoker<std::tuple<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> >::operator() (this=0x3558100014b8) at /usr/include/c++/9/thread:251
      #24 0x000055dc398f5594 in std::thread::_State_impl<std::thread::_Invoker<std::tuple<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> > >::_M_run (this=0x3558100014b0) at /usr/include/c++/9/thread:195
      #25 0x000035580d3eade4 in ?? () from /lib/x86_64-linux-gnu/libstdc++.so.6
      #26 0x000000006ffe2609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #27 0x000006cc4882e353 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Attachments

        Issue Links

          Activity

            Transition Time In Source Status Execution Times
            Marko Mäkelä made transition -
            Open In Progress
            1d 13h 22m 1
            Marko Mäkelä made transition -
            In Progress In Testing
            4s 1
            Elena Stepanova made transition -
            In Testing Stalled
            12h 22m 1
            Marko Mäkelä made transition -
            Stalled In Progress
            10h 19m 1
            Marko Mäkelä made transition -
            In Progress In Review
            7s 1
            Debarun Banerjee made transition -
            In Review Stalled
            2h 7m 1
            Marko Mäkelä made transition -
            Stalled Closed
            1h 20m 1

            People

              marko Marko Mäkelä
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.