MDEV-35619 Assertion failure in row_purge_del_mark_error

trx_sys_t::find_same_or_older_in_purge(): Correct a mistake that
was made in commit 19acb0257eec0956e3a0dd3b11bbb701fa7ea648
(MDEV-35508) and make the caching logic correspond to the one in
trx_sys_t::find_same_or_older(). In the more common code path
for 64-bit systems, the condition !hot was inadvertently inverted,
making us wrongly skip calls to find_same_or_older_low() when the
transaction may still be active.

Furthermore, the call should have been to find_same_or_older_low()
and not the wrapper find_same_or_older().